syntax = "proto3";

package NUgc.NSchema;

import "google/protobuf/descriptor.proto";

message TTableOptions {
    string Name = 1;
    string Field = 2;
    string Key = 3;
}

message TColumnOptions {
    string Name = 1;
    string Field = 2;
}

message TTableIndexOptions {
    string Name = 1;
    string Table = 2;
    string Key = 3;
    bool Unique = 4;
}

message TViewOptions {
    string Name = 1;
}

message TRpcOptions {
    string Name = 1;
    string Handler = 2;
    string Key = 3;
}

message TSchemaOptions {
    repeated TTableOptions Table = 1;
    repeated TColumnOptions Column = 2;
    repeated TTableIndexOptions TableIndex = 3;
    repeated TViewOptions View = 4;
    repeated TRpcOptions Rpc = 5;
}

extend google.protobuf.MessageOptions {
    TSchemaOptions schema = 55100;
}

enum EValueFormat {
    DEFAULT = 0; // from storage config
    JSON = 1;
    PROTO = 2;
}

extend google.protobuf.FieldOptions {
    string default_value = 55101;
    string storage = 55102;
    repeated string topic = 55103;
    bool internal_write = 55104;
    EValueFormat value_format = 55105;
}
